--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-libvmod-example (0.1) unstable; urgency=low
+libvmod-ip2location (0.1) unstable; urgency=low
 
   * First version
 
- -- Lasse Karstensen <lasse@varnish-software.com>  Wed, 19 Sep 2012 15:03:00 +0200
+ -- Brett Fitzgerald <brettgfitzgerald@gmail.com>  Tue, 26 Aug 2014 10:05:00 -0400
